mise a jour du projet
